完成大部份

--- a/实验报告.md
+++ b/实验报告.md
@@ -112,6 +112,61 @@ $$
 #### 时间复杂度
 设$a$，$b$，$n$的位数均为$k$，则算法共需$k$次循环，每次循环乘法与模运算均为$O(k^2)$，故总的时间复杂度为$O(k^3)$
 
+### 利用中国剩余定理加速解密过程
+#### 中国剩余定理
+考虑同余方程组：
+$$
+\begin{array}{cc}
+x \equiv a_1(\mod m_1)\\
+x \equiv a_2(\mod m_2)\\
+x \equiv a_3(\mod m_3)\\
+\vdots  \\
+x \equiv a_r(\mod m_r)\\
+\end{array}
+$$
+有解当且仅当$m_1,m_2\cdots m_r$两两互素，此时同余方程组有模$M = m_1 \times m_2 ... \times m_r$的唯一解，解由下式给出：
+$$
+    x = \sum_{i=1}^r a_iM_iy_i\mod M
+$$
+,其$M_i=M/m_i$，且$y_i = M_i^{-1}\mod m_i$，$1 \leq i \leq r$
+#### 算法过程
+在解密中需要计算$y^a \mod n$，这等价与求解方程
+$$
+X \equiv y^a \mod n
+$$
+又$n$的分解已知且其两个因子互素，因此求解以上方程等价与求解方程组
+$$
+\begin{array}{cc}
+    c_1 \equiv y^a \mod q \\
+    c_2 \equiv y^a \mod p
+\end{array}
+$$
+原式的解$X$可由中国剩余定理根据$c_1,c_2$得到
+而$y^a \mod p(\text{or} \ q)$的指数$a$可以进一步化简，以$y^a \mod q$为例：\
+设$a_d = a \mod (q - 1)$，则$a = (q - 1)*t + a_d$，故
+$$
+\begin{aligned}
+c_1 &\equiv y^a \mod q \\
+&\equiv y^{(q-1)*t + a_d} \mod q \\
+&\equiv y^{a_d}*(y^{q-1})^t \mod q 
+\ \ \text{由于$y \in Z_n^*$ ，因此$y^{q-1}\equiv 1 \mod q$}\\
+&\equiv y^{a_d} \mod q
+\end{aligned}
+$$
+因此上述方程组可以化为
+$$
+\begin{array}{cc}
+    c_1 \equiv y^{a_d} \mod q \\
+    c_2 \equiv y^{a_d} \mod p
+\end{array}
+$$
+#### 时间复杂度
+由于解密的时间主要是花在计算模幂运算上，因此只考虑这一部分的时间消耗
+- 设$q$与$p$的比特数为$k$，则$n$的比特数为$2k$
+- 不使用中国剩余定理加速解密时时间为$O((2k)^3)$
+- 使用中国剩余定理加速时解密时间为$O(2*k^3)$
+- 可以大致看出使用中国剩余定理可以使解密过程加速为原来的四倍
+
 ### oaep(最优非对称加密填充)
 #### 用法
 - 用于解决密文识别问题，保证敌手不可能在多项式时间内通过检查密文的手段找到任何有关明文的信息
@@ -243,9 +298,20 @@ def encrypt(self, plain_text):
     return cipher
 
 def decrypt(self, cipher):
-    M = RSA.modular_exponent(cipher, self.a, self.n)
+    logging.info("待解密密文：\n%d", cipher)
+    M = self.do_decrypt(cipher)
+    logging.info("解密得到的2048比特数：\n%d", M)
     plaint_text = RSA.strip(M)
+    logging.info("去除填充后得到的明文：\n%s", plaint_text)
     return plaint_text
+
+def do_decrypt(self, cipher):
+    c_1 = RSA.modular_exponent(cipher, self.dp, self.p)
+    c_2 = RSA.modular_exponent(cipher, self.dq, self.q)
+    # 求解中国剩余定理分解的两个方程
+
+    return ((c_1*self.q_inv*self.q % self.n) + (c_2*self.p_inv*self.p % self.n)) % self.n
+    # 根据中国剩余定理计算原来方程的解
 ```
 
 ## 运行结果
