--- a/实验报告.md
+++ b/实验报告.md
@@ -137,8 +137,8 @@ $$
 又$n$的分解已知且其两个因子互素，因此求解以上方程等价与求解方程组
 $$
 \begin{array}{cc}
-    c_1 \equiv y^a \mod q \\
-    c_2 \equiv y^a \mod p
+    y^a \equiv c_1 \mod q \\
+    y^a \equiv c_2 \mod p
 \end{array}
 $$
 原式的解$X$可由中国剩余定理根据$c_1,c_2$得到
@@ -160,8 +160,9 @@ $$
     c_2 \equiv y^{a_d} \mod p
 \end{array}
 $$
+- $X = c_1*p*p^{-1}(\mod q) + c_2*q*q^{-1}(\mod p)$
 #### 时间复杂度
-由于解密的时间主要是花在计算模幂运算上，因此只考虑这一部分的时间消耗
+由于解密的时间主要是花在计算模幂运算上，因此只考虑这一部分的时间消耗，这个时间与指数的比特数与模数的比特数有关
 - 设$q$与$p$的比特数为$k$，则$n$的比特数为$2k$
 - 不使用中国剩余定理加速解密时时间为$O((2k)^3)$
 - 使用中国剩余定理加速时解密时间为$O(2*k^3)$
